Aggiunta contenuto header

--- a/index.html
+++ b/index.html
@@ -8,7 +8,13 @@
 <body>
    <!-- Inizio header -->
    <header>
-
+      <h1>Il mio Viaggio a Londra</h1>
+      <!-- div contenente le tre immagini del landscape di Londra -->
+      <div>
+         <img src="img/pexels-bill-emrich-230794-0.jpg" alt="">
+         <img src="img/pexels-bill-emrich-230794-1.jpg" alt="">
+         <img src="img/pexels-bill-emrich-230794-2.jpg" alt="">
+      </div>
    </header>
    <!-- Fine header -->
 
@@ -17,7 +23,7 @@
 
    </main>
    <!-- Fine main -->
-   
+
    <!-- Inizio footer -->
    <footer>
 
