--- a/index.html
+++ b/index.html
@@ -21,7 +21,58 @@
 
    <!-- Inizio main -->
    <main>
+      <!-- Sezione "Le mie spese" -->
+      <section>
+         <h3>Le mie spese</h3>
+         <!-- Tabella dati spese -->
+         <table>
+            <!-- Header della tabella -->
+            <thead>
+               <th>Numero</th>
+               <th>Descrizione</th>
+               <th>Costo</th>
+            </thead>
+            <!-- Body della tabella -->
+            <tbody>
+               <!-- Prima riga -->
+               <tr>
+                  <td>1</td>
+                  <td>Biglietto Aereo</td>
+                  <td>120€</td>
+               </tr>
+               <!-- Seconda riga -->
+               <tr>
+                  <td>1</td>
+                  <td>Biglietto Aereo</td>
+                  <td>120€</td>
+               </tr>
+               <!-- Terza riga -->
+               <tr>
+                  <td>1</td>
+                  <td>Biglietto Aereo</td>
+                  <td>120€</td>
+               </tr>
+            </tbody>
+            <!-- Footer della tabella -->
+            <tfoot>
+               <tr>
+                  <td>Totale</td>
+                  <td></td>
+                  <td>360€</td>
+               </tr>
+            </tfoot>
+         </table>
+         <!-- Fine della tabella -->
+         <hr>
+      </section>
+      <!-- Sezione "Cose da fare" -->
+      <section>
 
+      </section>
+      <!-- Sezione "Info utili" -->
+      <section>
+
+      </section>
    </main>
    <!-- Fine main -->
 
