--- a/index.html
+++ b/index.html
@@ -68,7 +68,15 @@
 
       <!-- Sezione "Cose da fare" -->
       <section>
-
+         <h3>Cose da fare</h3>
+         <!-- Lista delle cose da fare e relativa spunta se effettuate -->
+         <ul>
+            <li>Visitare la Tower of London&cross;</li>
+            <li>Visitare greenwich &check;</li>
+            <li>Ascoltare un artista di strada a Covent Garden &check;</li>
+            <li>Mangiare il tipico Fish and Chips inglese&cross;</li>
+         </ul>
+         <hr>
       </section>
       <!-- Sezione "Info utili" -->
       <section>
