--- a/index.html
+++ b/index.html
@@ -71,16 +71,35 @@
          <h3>Cose da fare</h3>
          <!-- Lista delle cose da fare e relativa spunta se effettuate -->
          <ul>
-            <li>Visitare la Tower of London&cross;</li>
-            <li>Visitare greenwich &check;</li>
-            <li>Ascoltare un artista di strada a Covent Garden &check;</li>
-            <li>Mangiare il tipico Fish and Chips inglese&cross;</li>
+            <li>Visitare la Tower of London<strong>&cross;</strong></li>
+            <li>Visitare greenwich <strong>&check;</strong></li>
+            <li>Ascoltare un artista di strada a Covent Garden <strong>&check;</strong></li>
+            <li>Mangiare il tipico Fish and Chips inglese<strong>&cross;</strong></li>
          </ul>
          <hr>
       </section>
       <!-- Sezione "Info utili" -->
       <section>
-
+         <h3>Info utili:</h3>
+         <!-- Lista numerata -->
+         <ol>
+            <li>Numeri utili di emergenza
+               <!-- Dettagli dei numeri di emergenza -->
+               <ul>
+                  <li><strong>999</strong> - Emergenza</li>
+                  <li><strong>101</strong> - Numero Polizia</li>
+                  <li><strong>111</strong> - Numero Assistenza Medica</li>
+               </ul>
+            </li>
+            <li>Hotel
+               <!-- Dettagli dell'hotel -->
+               <ul>
+                  <li><strong>Nome hotel:</strong>Buckingham Palace</li>
+                  <li><strong>Indirizzo Hotel:</strong>Westminster,London SW1A 1AA,Regno Unito</li>
+               </ul>
+            </li>
+         </ol>
+         <hr>
       </section>
    </main>
    <!-- Fine main -->
