--- a/index.html
+++ b/index.html
@@ -98,7 +98,14 @@
                <!-- Dettagli dell'hotel -->
                <ul>
                   <li><strong>Nome hotel:</strong>Buckingham Palace</li>
-                  <li><strong>Indirizzo Hotel:</strong>Westminster,London SW1A 1AA,Regno Unito</li>
+                  <li><strong>Indirizzo hotel:</strong>Westminster,London SW1A 1AA,Regno Unito</li>
+               </ul>
+            </li>
+            <!-- Dettagli dei voli -->
+            <li>Aereo
+               <ul>
+                  <li><strong>Volo di Andata:</strong> YI234X, ore 9:30 da Milano Malpensa</li>
+                  <li><strong>Volo di Ritorno:</strong> YI236X, ore 18:30 da London Heathrow</li>
                </ul>
             </li>
          </ol>
